Better code highlighting on previous blog post

--- a/_posts/2017-09-04-my-vimrc.md
+++ b/_posts/2017-09-04-my-vimrc.md
@@ -8,68 +8,68 @@ categories: vim customisation
 You can view my .vimrc file [on GitHub](https://github.com/williambl/vimrc/blob/master/.vimrc). It's patched together from various sources.
 Here I'm going to do a line-by-line explanation of why I have written what I have.
 
-```
+{% highlight vim %}
 set history=500
-```
+{% endhighlight %}
 I have this so that I can undo as far back as I need to.
 
-```
+{% highlight vim %}
 set autoindent
 set tabstop=8 softtabstop=0 expandtab shiftwidth=4 smarttab
-```
+{% endhighlight %}
 Various indentation/tab improvements including autoindentation and  tabs expanding to 4 spaces.
 
-```
+{% highlight vim %}
 set autoread
-```
+{% endhighlight %}
 If the file I'm editing is modified externally, vim reloads it.
 
-```
+{% highlight vim %}
 command W w !sudo tee % > /dev/null
-```
+{% endhighlight %}
 :W does the same as :w but with sudo - useful for when you forget to run vim as sudo.
 
-```
+{% highlight vim %}
 set ruler
 set number
-```
+{% endhighlight %}
 I can't stand editing a file without being able to see line numbers and my location on the page.
 
-```
+{% highlight vim %}
 set hlsearch
-```
+{% endhighlight %}
 Highlighting seach results makes searching much better.
 
-```
+{% highlight vim %}
 filetype indent plugin on
-```
+{% endhighlight %}
 Needed for various things.
 
-```
+{% highlight vim %}
 syntax enable
-```
+{% endhighlight %}
 Enables syntax highlighting.
 
-```
+{% highlight vim %}
 map <C-j> <C-W>j
 map <C-k> <C-W>k
 map <C-h> <C-W>h
 map <C-l> <C-W>l
-```
+{% endhighlight %}
 This is amazing - it allows you to move across windows with ctrl+hjkl rather than ctrl+w hjkl. Saves so much time. It's from [the ultimate vimrc](https://github.com/amix/vimrc/blob/master/vimrcs/basic.vim).
 
-```
+{% highlight vim %}
 set ignorecase
 set smartcase
-```
+{% endhighlight %}
 Use case insensitive search, except when using capital letters.
 
-```
+{% highlight vim %}
 set backspace=indent,eol,start
-```
+{% endhighlight %}
 Allow backspacing over autoindent, line breaks and start of insert action
 
-```
+{% highlight vim %}
 call plug#begin('~/.vim/plugged')
 Plug 'flazz/vim-colorschemes'
 Plug 'tpope/vim-surround'
@@ -83,86 +83,86 @@ Plug 'vim-airline/vim-airline-themes'
 Plug 'Valloric/youcompleteme', { 'do': './install.py' }
 Plug 'airblade/vim-gitgutter'
 call plug#end()
-```
+{% endhighlight %}
 This uses the amazing [vim-plug](https://github.com/junegunn/vim-plug) to install my plugins. Here I'll go through them:
 
-```
+{% highlight vim %}
 Plug 'flazz/vim-colorschemes'
-```
+{% endhighlight %}
 This includes many colourschemes. I use molokai.
 
-```
+{% highlight vim %}
 Plug 'tpope/vim-surround'
-```
+{% endhighlight %}
 This amazing plugin lets you easily surround text with quotes, html tags, brackets, etc.
 
-```
+{% highlight vim %}
 Plug 'scrooloose/nerdcommenter'
-```
+{% endhighlight %}
 This makes commenting really streamlined.
 
-```
+{% highlight vim %}
 Plug 'scrooloose/nerdtree'
-```
+{% endhighlight %}
 This adds a very useful tree view to see your files and open new ones without leaving vim.
 
-```
+{% highlight vim %}
 Plug 'Xuyuanp/nerdtree-git-plugin'
-```
+{% endhighlight %}
 Adds git support to nerdtree. A must have if you use git and nerdtree.
 
-```
+{% highlight vim %}
 Plug 'tpope/vim-fugitive'
-```
+{% endhighlight %}
 While we're talking about git, here's a plugin that allows you to use git from within vim!
 
-```
+{% highlight vim %}
 Plug 'sheerun/vim-polyglot'
-```
+{% endhighlight %}
 This adds loads of language-specific functionality. Much better than installing all the language-specific plugins seperately.
 
-```
+{% highlight vim %}
 Plug 'vim-airline/vim-airline'
-```
+{% endhighlight %}
 This plugin gives a great status bar at the bottom with loads of info. On my system I had to fiddle a bit with the symbols to get them to work.
 
-```
+{% highlight vim %}
 Plug 'vim-airline/vim-airline-themes'
-```
+{% endhighlight %}
 Themes for vim-airline.
 
-```
+{% highlight vim %}
 Plug 'Valloric/youcompleteme', { 'do': './install.py' }
-```
+{% endhighlight %}
 This plugin adds autocomplete for loads of languages.
 
-```
+{% highlight vim %}
 Plug 'airblade/vim-gitgutter'
-```
+{% endhighlight %}
 This adds a line along the side showing git additions, deletions or changes.
 
 Okay, now we're out of the plugins. There's still some more stuff though.
 
-```
+{% highlight vim %}
 colorscheme molokai
-```
+{% endhighlight %}
 Other colour schemes are available.
 
-```
+{% highlight vim %}
 let g:airline_theme='molokai'
-```
+{% endhighlight %}
 Other airline themes area available.
 
-```
+{% highlight vim %}
 if !exists('g:airline_symbols')
     let g:airline_symbols = {}
 endif
-```
+{% endhighlight %}
 Creating an array of airline symbols to fill.
 
-```
+{% highlight vim %}
 let g:airline_symbols.branch = '⎇'
-```
+{% endhighlight %}
 Changing the branch symbol to prevent it from being rendered as just a question mark in a box.
 
 That's my .vimrc. If you have any suggestions or comments, please do send them to me with one of the contact options.
