Posts now have an image

--- a/_posts/2017-09-04-my-vimrc.md
+++ b/_posts/2017-09-04-my-vimrc.md
@@ -3,6 +3,7 @@ layout: post
 title:  "An explanation of my .vimrc and vim plugins"
 date:   2017-09-04 21:16:00
 categories: vim customisation
+image: /images/vim.png
 ---
 
 You can view my .vimrc file [on GitHub](https://github.com/williambl/vimrc/blob/master/.vimrc). It's patched together from various sources.
