--- a/_posts/2017-09-04-my-vimrc.md
+++ b/_posts/2017-09-04-my-vimrc.md
@@ -3,7 +3,8 @@ layout: post
 title:  "An explanation of my .vimrc and vim plugins"
 date:   2017-09-04 21:16:00
 categories: vim customisation
-image: /images/vim.png
+image: /images/vim/vim-1280px.png
+thumb: /images/vim/vim-100px.png
 ---
 
 You can view my .vimrc file [on GitHub](https://github.com/williambl/vimrc/blob/master/.vimrc). It's patched together from various sources.
