Fix excerpt of vimrc post again

--- a/_posts/2017-09-04-my-vimrc.md
+++ b/_posts/2017-09-04-my-vimrc.md
@@ -3,7 +3,7 @@ layout: post
 title:  "An explanation of my .vimrc and vim plugins"
 date:   2017-09-04 21:16:00
 categories: vim customisation
-excerpt: "You can view my .vimrc file [on GitHub](https://github.com/williambl/vimrc/blob/master/.vimrc). It's patched together from various sources. Here I'm going to do a line-by-line explanation of it."
+excerpt: "You can view my .vimrc file on GitHub. It's patched together from various sources. Here I'm going to do a line-by-line explanation of it."
 image: 
   feature: vim/vim-1280px.png
   thumb: vim/vim-100px.png
